--- a/source/gui/ui/About.ui
+++ b/source/gui/ui/About.ui
@@ -3,16 +3,16 @@
  <class>About</class>
  <widget class="QDialog" name="About">
   <property name="windowModality">
-   <enum>Qt::WindowModal</enum>
+      <enum>Qt::WindowModal</enum>
   </property>
-  <property name="geometry">
-   <rect>
-    <x>0</x>
-    <y>0</y>
-    <width>455</width>
-    <height>452</height>
-   </rect>
-  </property>
+     <property name="geometry">
+         <rect>
+             <x>0</x>
+             <y>0</y>
+             <width>455</width>
+             <height>452</height>
+         </rect>
+     </property>
      <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
              <horstretch>0</horstretch>
@@ -37,16 +37,16 @@
                      <bool>true</bool>
                  </property>
                  <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="minimumSize">
-      <size>
-       <width>355</width>
-       <height>115</height>
-      </size>
+                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                     </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                     <size>
+                         <width>355</width>
+                         <height>115</height>
+                     </size>
      </property>
      <property name="maximumSize">
       <size>
@@ -69,32 +69,37 @@
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
-     <property name="html">
-         <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-             &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-             p, li { white-space: pre-wrap; }
-             &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt;
-             font-weight:400; font-style:normal;&quot;&gt;
-             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;
-             &lt;/span&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:14pt;&quot;&gt;Event Loto Associatif&lt;/span&gt;&lt;span
-             style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
-             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Pour
-             le sou des écoles de Genay. &lt;/span&gt;&lt;/p&gt;
-             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;le
-             github: &lt;/span&gt;&lt;a href=&quot;https://github.com/Silmaen/EvenementLoto&quot;&gt;&lt;span style=&quot;
-             font-family:'Segoe UI'; font-size:9pt; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;&lt;span
-             style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
-             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Auteur:
-             Damien Lachouette. &lt;/span&gt;&lt;/p&gt;
-             &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
-             -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Segoe UI'; font-size:9pt;&quot;&gt;Copyright
-             (c) 2021. &lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
-         </string>
-     </property>
+                 <property name="html">
+                     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+                         &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta
+                         charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+                         p, li { white-space: pre-wrap; }
+                         hr { height: 1px; border-width: 0; }
+                         li.unchecked::marker { content: &quot;\2610&quot;; }
+                         li.checked::marker { content: &quot;\2612&quot;; }
+                         &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt;
+                         font-weight:400; font-style:normal;&quot;&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg
+                         2'; font-size:7.8pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt; &lt;span style=&quot; font-size:14pt;&quot;&gt;Event
+                         Loto Associatif&lt;/span&gt; &lt;span style=&quot; font-family:'MS Shell Dlg 2';
+                         font-size:7.8pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt;Pour le sou des écoles de Genay. &lt;span style=&quot;
+                         font-family:'MS Shell Dlg 2'; font-size:7.8pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt;le github: &lt;a href=&quot;https://github.com/Silmaen/EvenementLoto&quot;&gt;&lt;span
+                         style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;Événement Loto&lt;/span&gt;&lt;/a&gt;
+                         &lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt;Auteur: Damien Lachouette. &lt;span style=&quot;
+                         font-family:'MS Shell Dlg 2'; font-size:7.8pt;&quot;&gt; &lt;/span&gt;&lt;/p&gt;
+                         &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px;
+                         -qt-block-indent:0; text-indent:0px;&quot;&gt;Copyright (c) 2022. &lt;/p&gt;&lt;/body&gt;&lt;/html&gt;
+                     </string>
+                 </property>
      <property name="acceptRichText">
       <bool>true</bool>
      </property>
@@ -106,7 +111,7 @@
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>GNU General Public License</string>
+         <string>MIT License</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -133,12 +138,27 @@
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="plainText">
-         <string>This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or at your option any later version.
+            <string>Copyright (c) 2020-2022 Damien Lachouette
 
-This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+                Permission is hereby granted, free of charge, to any person obtaining
+                a copy of this software and associated documentation files (the
+                &quot;Software&quot;), to deal in the Software without restriction, including
+                without limitation the rights to use, copy, modify, merge, publish,
+                distribute, sublicense, and/or sell copies of the Software, and to
+                permit persons to whom the Software is furnished to do so, subject to
+                the following conditions:
 
-You should have received a copy of the GNU General Public License along with this program. If not, see &lt;https://www.gnu.org/licenses/&gt;.
-</string>
+                The above copyright notice and this permission notice shall be
+                included in all copies or substantial portions of the Software.
+
+                THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND,
+                EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+                MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+                NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+                LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+                OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+                WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+            </string>
         </property>
        </widget>
       </item>
